[gd_scene load_steps=24 format=3 uid="uid://dbd7jlhw26vum"]

[ext_resource type="Script" uid="uid://dmht7pu72bbn3" path="res://scripts/Player/player.gd" id="1_qlg0r"]
[ext_resource type="Texture2D" uid="uid://b10067slknnyp" path="res://assets/sprites/Player-Sheet.png" id="2_fjrip"]
[ext_resource type="Script" uid="uid://bwbo41jnuls3y" path="res://scripts/Player/states/state_machine.gd" id="2_g2els"]
[ext_resource type="Script" uid="uid://dr481k4vvubal" path="res://scripts/Player/states/idle.gd" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://dl2w6ux6lheu2" path="res://scripts/Player/gun_particles.gd" id="3_ur7pv"]
[ext_resource type="Script" uid="uid://c2atxyo6fefyi" path="res://scenes/fall.gd" id="4_dqkch"]
[ext_resource type="Script" uid="uid://bdapek78uj82i" path="res://scripts/Player/states/move.gd" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://c8xsqlhwf1gm2" path="res://scripts/Player/states/jump.gd" id="7_fjrip"]
[ext_resource type="Script" uid="uid://c2yy7w14jm4bg" path="res://scripts/Player/states/shoot.gd" id="8_smehm"]
[ext_resource type="Texture2D" uid="uid://cyjgiuyp86xf8" path="res://assets/sprites/flash.png" id="10_y4r1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(8, 14)

[sub_resource type="Animation" id="Animation_d2wvv"]
resource_name = "Fall"
length = 0.20001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "Idle"
length = 0.001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "Jump"
length = 0.001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y4r1p"]
resource_name = "Move"
length = 0.53334
loop_mode = 1
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ur7pv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3v2ag"]
resource_name = "Shoot"
length = 0.400007
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(0, 4), Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2wvv"]
_data = {
&"Fall": SubResource("Animation_d2wvv"),
&"Idle": SubResource("Animation_smehm"),
&"Jump": SubResource("Animation_fjrip"),
&"Move": SubResource("Animation_y4r1p"),
&"RESET": SubResource("Animation_ur7pv"),
&"Shoot": SubResource("Animation_3v2ag")
}

[sub_resource type="Gradient" id="Gradient_y4r1p"]
offsets = PackedFloat32Array(0, 0.3, 0.663636, 0.8, 1)
colors = PackedColorArray(0.996078, 0.905882, 0.380392, 1, 0.968627, 0.462745, 0.133333, 1, 0.0941176, 0.0784314, 0.145098, 1, 0.0941176, 0.0784314, 0.145098, 1, 0.0941176, 0.0784314, 0.145098, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d2wvv"]
gradient = SubResource("Gradient_y4r1p")

[sub_resource type="Curve" id="Curve_ur7pv"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.757353, 1.23596), 0.668539, 0.668539, 0, 0, Vector2(1, 2), 3.66742, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_y4r1p"]
curve = SubResource("Curve_ur7pv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3v2ag"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
inherit_velocity_ratio = 0.2
spread = 20.0
initial_velocity_min = 15.0
initial_velocity_max = 50.0
gravity = Vector3(0, -50, 0)
damping_min = 50.0
damping_max = 50.0
scale_max = 1.2
scale_curve = SubResource("CurveTexture_y4r1p")
color_ramp = SubResource("GradientTexture1D_d2wvv")

[node name="Player" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1_qlg0r")
move_speed = 100
jump_velocity = -300
acceleration = 1500

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_fjrip")
offset = Vector2(0, -1)
hframes = 8
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_g2els")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d2wvv")
}
autoplay = "Idle"

[node name="GunParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_3v2ag")
script = ExtResource("3_ur7pv")

[node name="MuzzleFlash" type="PointLight2D" parent="."]
position = Vector2(7, -9)
enabled = false
texture = ExtResource("10_y4r1p")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_g2els")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "shoot_state")]
script = ExtResource("3_qhqgy")
fall_state = NodePath("../Fall")
jump_state = NodePath("../Jump")
move_state = NodePath("../Move")
shoot_state = NodePath("../Shoot")
animation_name = "Idle"
metadata/_custom_type_script = "uid://okv8kqkxvwyp"

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "jump_state", "shoot_state")]
script = ExtResource("4_dqkch")
idle_state = NodePath("../Idle")
move_state = NodePath("../Move")
jump_state = NodePath("../Jump")
shoot_state = NodePath("../Shoot")
animation_name = "Fall"
metadata/_custom_type_script = "uid://okv8kqkxvwyp"

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "fall_state", "jump_state", "shoot_state")]
script = ExtResource("6_tuyoq")
idle_state = NodePath("../Idle")
fall_state = NodePath("../Fall")
jump_state = NodePath("../Jump")
shoot_state = NodePath("../Shoot")
animation_name = "Move"
metadata/_custom_type_script = "uid://okv8kqkxvwyp"

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state", "shoot_state")]
script = ExtResource("7_fjrip")
fall_state = NodePath("../Fall")
shoot_state = NodePath("../Shoot")
animation_name = "Jump"
metadata/_custom_type_script = "uid://okv8kqkxvwyp"

[node name="Shoot" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "fall_state", "move_state", "jump_state")]
script = ExtResource("8_smehm")
idle_state = NodePath("../Idle")
fall_state = NodePath("../Fall")
move_state = NodePath("../Move")
jump_state = NodePath("../Jump")
animation_name = "Shoot"
metadata/_custom_type_script = "uid://okv8kqkxvwyp"
